--- a/android-reference-app/app/src/main/res/values/strings.xml
+++ b/android-reference-app/app/src/main/res/values/strings.xml
@@ -1,21 +1,8 @@
 <resources>
     <string name="app_name">Android reference app</string>
-    <string name="main_title">Agora Video SDK Samples</string>
+    <string name="main_title">Agora Signaling SDK Samples</string>
     <string name="leave">Leave</string>
     <string name="join">Join</string>
     <string name="authentication_server_hint">Token server URL</string>
-    <string name="network_status">Network Status:</string>
     <string name="channel_name_hint">Channel name here</string>
-    <string name="broadcaster">Host</string>
-    <string name="audience">Audience</string>
-    <string name="start_echo_test">Start Echo Test</string>
-    <string name="stop_echo_test">Stop Echo Test</string>
-    <string name="product">Product:</string>
-    <string name="open_media_file">Open Media File</string>
-    <string name="play_media_file">" Play Media File"</string>
-    <string name="opening_media_file">Opening Media File...</string>
-    <string name="pause">Pause media</string>
-    <string name="resume">Resume</string>
-    <string name="mute">Mute</string>
-    <string name="start_screen_sharing">Start Screen Sharing</string>
 </resources>
