--- a/signaling-reference-app/app/src/main/res/values/strings.xml
+++ b/signaling-reference-app/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="join">Join</string>
     <string name="authentication_server_hint">Token server URL</string>
     <string name="channel_name_hint">Channel name here</string>
+    <string name="message">Message</string>
 </resources>
