--- a/signaling-reference-app/app/src/main/res/values/strings.xml
+++ b/signaling-reference-app/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="message">Message</string>
     <string name="send"><![CDATA[>>]]></string>
     <string name="presence">Presence:</string>
+    <string name="topic_name_hint">Topic name here</string>
 </resources>
