--- a/signaling-reference-app/app/src/main/res/values/strings.xml
+++ b/signaling-reference-app/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
     <string name="topic_name_hint">Topic name here</string>
     <string name="join_topic">Join Topic</string>
     <string name="enter_topic_name">Enter topic name</string>
+    <string name="join_stream_channel">Join stream channel</string>
+    <string name="leave_stream_channel">Leave stream channel</string>
 </resources>
