--- a/signaling-reference-app/app/src/main/res/values/strings.xml
+++ b/signaling-reference-app/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="enter_topic_name">Enter topic name</string>
     <string name="join_stream_channel">Join stream channel</string>
     <string name="leave_stream_channel">Leave stream channel</string>
+    <string name="lock_name_hint">Lock name</string>
+    <string name="lock_get">Get</string>
+    <string name="lock_set">Set</string>
+    <string name="lock_acquire">Acquire</string>
+    <string name="lock_remove">Remove</string>
+    <string name="lock_release">Release</string>
+    <string name="locks_caption">Locks:</string>
+    <string name="channel_metadata_caption">Channel metadata:</string>
+    <string name="key_hint">Metadata key</string>
 </resources>
